20_db.tf
resource "aws_db_instance" "jhy_mydb" {
    allocated_storage    = 10
    engine               = "mysql"
    engine_version       = "5.7"
    instance_class       = "db.t2.micro"
    name                 = "mydb"
    identifier           = "mydb"
    username             = "admin"
    password             = "It12345!"
    parameter_group_name = "default.mysql5.7"
    availability_zone    = "ap-northeast-2a"
    db_subnet_group_name = aws_db_subnet_group.jhy_dbsn.id
    skip_final_snapshot  = true
    tags  = {
      name  = "jhy-mydb"
    }
}

resource "aws_db_subnet_group" "jhy_dbsn" {
  name = "jhy-dbsb-group" 
  subnet_ids = [aws_subnet.jhy-pria.id,aws_subnet.jhy-pric.id]  
  tags = {
    name = "jhy-dbsb-group"
  }
}
